# AdventOfCode2023C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.py  run.py  tmp.txt
src/: day1.c  day2.c  day3.c  day4.c  day5.c  days.h  main.c
